--- a/index.css
+++ b/index.css
@@ -10,10 +10,15 @@ body {
   justify-content: center;
 }
 
+.headline {
+  text-align: center;
+}
+
 .container {
   background-color: white;
   margin-top: 20vh;
-  width: 40vh;
+  width: 20vw;
+  overflow: auto;
   padding: 5%;
   border-radius: 3px;
   display: flex;
@@ -21,6 +26,12 @@ body {
   align-items: center;
   justify-content: center;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+@media screen and (max-width: 928px) {
+  .container {
+    width: 60vw;
+  }
 }
 
 form {
